<resources>
    <string name="app_name">iXensorHW</string>
    <string name="title_chat">Chat</string>
    <string name="title_phone">Phone</string>
    <string name="title_explore">Explore</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_coin">Coin</string>
    <string name="account">account</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="email">email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_and_continue">Login and continue</string>
    <string name="registration">Registration</string>
    <string name="name">name</string>
    <string name="register">REGISTER</string>
    <string name="coin">Coin</string>
    <string name="xnc_bag">XNC(Bag)</string>
    <string name="interaction_rewords">Interaction Rewords</string>
    <string name="social_rewords">Social Rewords</string>
    <string name="revenue">Revenue</string>
    <string name="store">Store</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_name">last name</string>
    <string name="first_name">first name</string>
</resources>