<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chat">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.payware.ixensorhw.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.payware.ixensorhw.ui.phone.PhoneFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.payware.ixensorhw.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.payware.ixensorhw.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_explore" />
</navigation>