<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/coin"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_card_sub_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.07999998"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_card_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xnc_bag"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_card_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_title" />

            <TextView
                android:id="@+id/tv_card_title_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="910,123,456"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_card_title" />

            <TextView
                android:id="@+id/tv_card_sub_title_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_card_title_number"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_title_number" />

            <TextView
                android:id="@+id/tv_expires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expires in"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_expires_days"
                app:layout_constraintEnd_toEndOf="@+id/tv_card_title_number"
                app:layout_constraintTop_toTopOf="@+id/pb_coin"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_expires_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="325 days"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/pb_coin"
                app:layout_constraintEnd_toEndOf="@+id/tv_expires"
                app:layout_constraintTop_toBottomOf="@+id/tv_expires" />

            <ProgressBar
                android:id="@+id/pb_coin"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:max="100"
                android:progress="80"
                app:layout_constraintEnd_toStartOf="@+id/tv_expires"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_card_sub_title" />

            <TextView
                android:id="@+id/tv_interaction_rewords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/interaction_rewords"
                app:layout_constraintBottom_toTopOf="@+id/tv_social_rewords"
                app:layout_constraintStart_toStartOf="@+id/tv_card_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_expires_days"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_social_rewords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social_rewords"
                app:layout_constraintBottom_toTopOf="@+id/tv_revenue"
                app:layout_constraintStart_toStartOf="@+id/tv_card_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_interaction_rewords" />


            <TextView
                android:id="@+id/tv_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revenue"
                app:layout_constraintStart_toStartOf="@+id/tv_card_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_social_rewords" />


            <TextView
                android:id="@+id/tv_interaction_rewords_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+1,587"
                app:layout_constraintBottom_toTopOf="@+id/tv_revenue_number"
                app:layout_constraintEnd_toEndOf="@+id/tv_card_title_number"
                app:layout_constraintTop_toTopOf="@+id/tv_interaction_rewords" />

            <TextView
                android:id="@+id/tv_social_rewords_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+152,327,411"
                app:layout_constraintEnd_toEndOf="@+id/tv_card_title_number"
                app:layout_constraintTop_toBottomOf="@+id/tv_revenue_number" />

            <TextView
                android:id="@+id/tv_revenue_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+123,477,566"
                app:layout_constraintBottom_toTopOf="@+id/tv_social_rewords_number"
                app:layout_constraintEnd_toEndOf="@+id/tv_card_title_number"
                app:layout_constraintTop_toBottomOf="@+id/tv_interaction_rewords_number" />


            <Button
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="More"
                android:textColor="@color/teal_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_revenue" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:gravity="center"
        android:id="@+id/tv_card_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:elevation="5dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="@id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView" />







</androidx.constraintlayout.widget.ConstraintLayout>